<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/selinux_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selinux"
                    android:textColor="@color/portal_mini_title_color" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_open_selinux"
                    android:textSize="11sp" />
            </LinearLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/selinux_switch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:useMaterialThemeColors="true"/>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/selinux_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/altitude_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/altitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                android:textColor="@color/portal_mini_title_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/altitude_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude_desc"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/altitude_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/altitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80.0米"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@id/altitude_title"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/altitude_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/speed_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rocker_speed"
                android:textColor="@color/portal_mini_title_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/speed_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rocker_speed_desc"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.05米/秒"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@id/speed_title"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/speed_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accuracy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/accuracy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy"
                android:textColor="@color/portal_mini_title_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/accuracy_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy_desc"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accuracy_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/accuracy_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25.0米"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@id/accuracy_title"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>