<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mock.MockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/mock_location_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:layout_margin="8dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/portal_mini_title_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                    android:text="@string/target_route"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mock_route_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none_route"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/switch_mock"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:textColor="@color/white"
                            android:text="@string/start_mock"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                            android:insetRight="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:textSize="12sp"
                            app:icon="@drawable/rounded_play_arrow_24"
                            app:iconGravity="textStart"
                            app:iconPadding="0dp"
                            android:padding="6dp"
                            app:iconTint="@color/white"
                            app:cornerRadius="12dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="end|center">

                        <CheckedTextView
                            android:id="@+id/rocker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                            android:checkMarkTint="@color/portal_mock_off"
                            android:checked="false"
                            android:gravity="center"
                            android:text="@string/rocker"
                            android:textColor="@color/portal_mock_off"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:textColor="@color/portal_mini_title_color"
            android:text="@string/history_route"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="6dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historical_route_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_mock_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:contentDescription="@string/follow_location"
        app:srcCompat="@drawable/sharp_location_off_24"
        android:backgroundTint="@color/portal_mock_off"
        android:tint="@color/portal_appbar_color"
        app:fabSize="auto"
        android:visibility="gone"
        android:layout_gravity="bottom|end"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/baseline_keyboard_arrow_up_24"
            app:fabSize="normal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:contentDescription="@string/add_route"
                android:visibility="gone"
                app:srcCompat="@drawable/baseline_route_24"
                app:fabSize="mini"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>