<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:contentPadding="8dp"
    app:cardBackgroundColor="#ccffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loc_detail_text"
            android:textSize="11sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/portal_location_detail_background"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/latlon"
                    android:padding="8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="11sp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/loc_detail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:layout_weight="3"
                    android:text=""
                    android:background="@color/portal_location_detail_block"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:textIsSelectable="true"
                    android:textColor="@color/portal_appbar_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/portal_location_detail_background"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/address"
                    android:padding="8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="11sp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/loc_addr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text=""
                    android:background="@color/portal_location_detail_block"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:textIsSelectable="true"
                    android:textColor="@color/portal_appbar_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>